--- a/index.html
+++ b/index.html
@@ -75,6 +75,30 @@
         </header>
         <!-- banner -->
 
+        <!-- Subscribe Modal -->
+        <div class="modal fade" id="subscribe_modal" tabindex="-1" aria-labelledby="subscribe_modal" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Subscribe for Newsletters</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control form-control-sm" placeholder="Your Email ID">
+                        </div>
+                        <div class="mb-3">
+                            <input type="submit" class="btn btn-success btn-sm btn-block" value="Subscribe Now">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            </div>
+        </div>
+
 
     </body>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
