--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
         </header>
         <!-- banner -->
 
+         <!-- footer -->
+        <footer class="main-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="copy text-center">
+                            <p><small>Copyright &copy; 2020. All Rights Reserved</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- footer -->
+
         <!-- Subscribe Modal -->
         <div class="modal fade" id="subscribe_modal" tabindex="-1" aria-labelledby="subscribe_modal" aria-hidden="true">
             <div class="modal-dialog">
