--- a/index.html
+++ b/index.html
@@ -113,6 +113,106 @@
             </div>
         </div>
 
+        <!-- body content -->
+        <section class="default-body-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-md-8">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item">
+                            <div class="row">
+                                <div class="col-lg-3 col-md-3">
+                                    <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                </div>
+                                <div class="col-lg-9 col-md-9">
+                                    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet ratione laboriosam quibusdam libero esse, cumque aperiam temporibus nesciunt maxime facere illum id quos eos aliquid dolorem qui ad deserunt natus.</p>
+                                </div>
+                            </div> 
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-3">
+                                        <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    </div>
+                                    <div class="col-lg-9 col-md-9">
+                                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet ratione laboriosam quibusdam libero esse, cumque aperiam temporibus nesciunt maxime facere illum id quos eos aliquid dolorem qui ad deserunt natus.</p>
+                                    </div>
+                                </div> 
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-3">
+                                        <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    </div>
+                                    <div class="col-lg-9 col-md-9">
+                                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet ratione laboriosam quibusdam libero esse, cumque aperiam temporibus nesciunt maxime facere illum id quos eos aliquid dolorem qui ad deserunt natus.</p>
+                                    </div>
+                                </div> 
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-3">
+                                        <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    </div>
+                                    <div class="col-lg-9 col-md-9">
+                                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet ratione laboriosam quibusdam libero esse, cumque aperiam temporibus nesciunt maxime facere illum id quos eos aliquid dolorem qui ad deserunt natus.</p>
+                                    </div>
+                                </div> 
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-3">
+                                        <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    </div>
+                                    <div class="col-lg-9 col-md-9">
+                                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet ratione laboriosam quibusdam libero esse, cumque aperiam temporibus nesciunt maxime facere illum id quos eos aliquid dolorem qui ad deserunt natus.</p>
+                                    </div>
+                                </div> 
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+
+                        <aside class="card text-white bg-primary mb-3">
+                            <div class="card-body">
+                                <h4 class="card-title">Subscribe for News Letters</h4>
+                                <p class="card-text">Get latest updates and freebies</p>
+                                <form>
+                                    <div class="mb-3">
+                                        <input type="email" class="form-control form-control-sm" placeholder="Email ID" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <input type="submit" class="btn btn-block btn-sm btn-warning" value="Subscribe Now!">
+                                    </div>
+                                </form>
+                            </div>
+                        </aside>
+
+                        <ul class="list-group mb-3">
+                            <li class="list-group-item active">Archives</li>
+                            <li class="list-group-item"><a href="#"> 2018</a></li>
+                            <li class="list-group-item"><a href="#"> 2019</a></li>
+                            <li class="list-group-item"><a href="#"> 2020</a></li>
+                        </ul>
+
+                        <ul class="list-group mb-3">
+                            <li class="list-group-item active">Recent Posts</li>
+                            <li class="list-group-item"><a href="#">Post One</a></li>
+                            <li class="list-group-item"><a href="#">Post Two</a></li>
+                            <li class="list-group-item"><a href="#">Post Three</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- body content -->
+
         <!-- footer -->
         <footer class="main-footer">
             <div class="container">
@@ -127,7 +227,7 @@
         </footer>
         <!-- footer -->
 
-        
+
 
     </body>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
