--- a/archive.html
+++ b/archive.html
@@ -30,7 +30,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Pages
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -77,7 +77,7 @@
                         <a href="#" class="list-group-item">
                            <div class="row">
                                <div class="col-lg-3 col-md-3">
-                                   <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                   <img src="img/30.PNG" alt="" class="img-fluid rounded">
                                </div>
                                <div class="col-lg-9 col-md-9">
                                    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
@@ -88,7 +88,7 @@
                         <a href="#" class="list-group-item">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3">
-                                    <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    <img src="img/30.PNG" alt="" class="img-fluid rounded">
                                 </div>
                                 <div class="col-lg-9 col-md-9">
                                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
@@ -99,7 +99,7 @@
                          <a href="#" class="list-group-item">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3">
-                                    <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    <img src="img/30.PNG" alt="" class="img-fluid rounded">
                                 </div>
                                 <div class="col-lg-9 col-md-9">
                                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
@@ -110,7 +110,7 @@
                          <a href="#" class="list-group-item">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3">
-                                    <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    <img src="img/30.PNG" alt="" class="img-fluid rounded">
                                 </div>
                                 <div class="col-lg-9 col-md-9">
                                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
@@ -121,7 +121,7 @@
                          <a href="#" class="list-group-item">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3">
-                                    <img src="https://source.unsplash.com/random/600x600" alt="" class="img-fluid rounded">
+                                    <img src="img/30.PNG" alt="" class="img-fluid rounded">
                                 </div>
                                 <div class="col-lg-9 col-md-9">
                                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. consectetur adipisicing elit.</h3>
