--- a/default.html
+++ b/default.html
@@ -34,10 +34,17 @@
                   Dropdown
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="404.html">404</a></li>
+                  <li><a class="dropdown-item" href="archive.html">archive</a></li>
+                  <li><a class="dropdown-item" href="attachment.html">attachment</a></li>
+                  <li><a class="dropdown-item" href="auther.html">auther</a></li>
+                  <li><a class="dropdown-item" href="category.html">category</a></li>
+                  <li><a class="dropdown-item" href="date.html">date</a></li>
+                  <li><a class="dropdown-item" href="default.html">default</a></li>
+                  <li><a class="dropdown-item" href="image.html">image</a></li>
+                  <li><a class="dropdown-item" href="page.html">page</a></li>
+                  <li><a class="dropdown-item" href="search.html">search</a></li>
+                  <li><a class="dropdown-item" href="tag.html">tag</a></li>
                 </ul>
               </li>
               <li class="nav-item">
